# selenium-webscraper-MLStrom-JAO

./: .gitignore  .pre-commit-config.yaml  DEV_SETUP.md  Makefile  QUICKSTART.md  README.md  config.py  example_usage.py  main.py  pyproject.toml  requirements.txt  scrape_jao.py  standalone_jao_scraper.py  test_csv.py  test_scraper.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  security.yml
core/: api_client.py  rate_limiter.py  selenium_client.py
scrapers/: base.py  jao_scraper.py
scripts/: __init__.py
scripts/examples/: __init__.py  basic_api_scraper.py  basic_selenium_scraper.py
scripts/jao/: __init__.py  api_scraper.py  config.py  scraper.py
src/webscraper/: __init__.py  cli.py  exceptions.py
src/webscraper/core/: __init__.py  config.py  rate_limiter.py  state.py
src/webscraper/core/clients/: __init__.py  base.py  browser.py  http.py
src/webscraper/scrapers/: __init__.py  base.py
src/webscraper/utils/: __init__.py  dates.py  progress.py
src/webscraper/validation/: __init__.py  base.py  csv.py
tests/: __init__.py  conftest.py  test_scraper.sh
tests/unit/: __init__.py  test_config.py  test_rate_limiter.py  test_state.py  test_validation.py
utils/: progress.py  state.py  validation.py
